@@ -7369,7 +7369,7 @@ class Tx_Seminars_Tests_Unit_OldModel_EventTest extends Tx_Phpunit_TestCase {
 		$this->addSpeakerRelation(array('cancelation_period' => 1));
 
 		self::assertSame(
-			$GLOBALS['SIM_EXEC_TIME'] - Tx_Seminars_OldModel_AbstractTimeSpan::SECONDS_PER_DAY,
+			$GLOBALS['SIM_EXEC_TIME'] - Tx_Oelib_Time::SECONDS_PER_DAY,
 			$this->fixture->getCancelationDeadline()
 		);
 	}
@@ -7383,8 +7383,7 @@ class Tx_Seminars_Tests_Unit_OldModel_EventTest extends Tx_Phpunit_TestCase {
 		$this->addSpeakerRelation(array('cancelation_period' => 42));
 
 		self::assertSame(
-			$GLOBALS['SIM_EXEC_TIME']
-				- (42 * Tx_Seminars_OldModel_AbstractTimeSpan::SECONDS_PER_DAY),
+			$GLOBALS['SIM_EXEC_TIME'] - (42 * Tx_Oelib_Time::SECONDS_PER_DAY),
 			$this->fixture->getCancelationDeadline()
 		);
 	}
