@@ -15,6 +15,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5623] Use Tx_Oelib_Time::SECONDS_PER_DAY and drop our own constant
 - [#5646] Rename the test case classes to reflect the folder structure
 - [#5647] Replace language with LanguageService and initialize it
 - [#5617] Rename tx_seminars_registrationchild to Tx_Seminars_Tests_Unit_Fixtures_OldModel_TestingRegistration
